added login with swagger
